--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "functions": {
-      "api/myapp": {
-        "runtime": "vercel-go@1.3.1",
-        "entrypoint": "myapp.go"
+      "api/myapp.go": {
+        "runtime": "vercel-go@1.3.1"
       }
-    }
+    },
+    "includeFiles": ["myapp.go"]
   }
