--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
       {
         "source": "/api/hello",
-        "destination": "/api/hello.go"
+        "destination": "/api/hello/index.go"
       }
     ]
   }
